syntax = "proto3";

option go_package = "github.com/valkyraycho/bank_project/pb";

package pb;

import "google/protobuf/timestamp.proto";


message Account {
    int32 owner_id = 1;
    int32 balance = 2;
    string currency = 3;
    google.protobuf.Timestamp created_at = 4;
}

message CreateAccountRequest {
    int32 owner_id = 1;
    string currency = 3;
}

message CreateAccountResponse {
    Account account = 1;
}

message GetAccountRequest {
    int32 id = 1;
    int32 owner_id = 2;
}

message GetAccountResponse {
    Account account = 1;
}

message GetAccountsRequest {
    int32 owner_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetAccountsResponse {
    repeated Account accounts = 1;
}